# smarthome-pi-client

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HARNESS_WORKFLOW.md  Makefile  README.md  ble_scanner.py  pyproject.toml
.github/workflows/: python-ci.yml
docs/: PRODUCT_SENSE.md  RELIABILITY.md  SECURITY.md
tests/: conftest.py  test_ble_scanner.py
