[project]
name = "smarthome-pi-client"
version = "0.1.0"
description = "SwitchBot CO2センサー BLE スキャナー → Lambda API クライアント"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.22",
    "botocore>=1.34.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
